@@ -7,6 +7,7 @@ Version 0.3.9+
 	* Fix bug in sda when features were constant for a class
 	* Add select_best_kmeans
 	* Added defaultlearner as a better name than defaultclassifier
+	* Add `measures.curves.precision_recall`
 
 Version 0.3.9 2011-03-15 by luispedro
 	* Improve speed of k-nearest neighbour (10x on scikits-learn benchmark)
